# fault-tolerance-comparison

./: .clangd  .gitattributes  .gitignore  README.md  build.zig  build.zig.zon  devenv.nix  devenv.yaml
c/checker/: checker.h  checker_test.c
c/checkpoint/: checkpoint.h  checkpoint_test.c
c/common/: test.h
c/control_flow/: control_flow.h  control_flow_test.c
c/recovery_block/: recovery_block.h  recovery_block_test.c
c/tmr/: tmr.h  tmr_test.c
harness/: README.md  result_format.py
harness/c/: checkpoint_harness.c  control_flow_harness.c  recovery_block_harness.c  tmr_harness.c
harness/common/: harness_abi.h  harness_abi.zig  mps2_an386.ld  startup_mps2_an386.s  startup_virt_riscv32.s  virt_riscv32.ld
harness/e2e/injector/: .env  README.md  main.py  pyproject.toml
harness/e2e/injector/injector/: __init__.py  gdbmi.py
harness/fuzz/runner/: .env  campaigns.py  classification.py  classification_test.py  main.py  manifest.py  pyproject.toml  runner.py  symbols.py
harness/injector/: README.md  main.py  pyproject.toml
harness/qemu_fuzz/: campaigns.py  main.py  manifest.py  pyproject.toml  runner.py  symbols.py
harness/tui/: PLAN.md  config.toml  go.mod  go.sum  harness-tui
harness/zig/: checkpoint_harness.zig  control_flow_harness.zig  recovery_block_harness.zig  tmr_harness.zig
nix/: qemu-ft-fuzz-plugin.nix
plugins/qemu-ft-fuzz/: qemu-ft-fuzz.c
research/: repos.md
results/: c-recovery-block.csv  zig-recovery-block.csv
results/asm/: checkpoint-c-m4.s  checkpoint-zig-m4.s  recovery-block-c-m4.s  tmr-c-m4.s  (+2 more)
slides/: presentation.md
(+121 files in other folders)
